# test_django_async

./: README.md  manage.py  pyproject.toml  test_django_async.epj
async/: apps.py
async/management/commands/: runserver_asgi.py
test_async/: apps.py  models.py  serializers.py  tests.py  views.py
test_async/migrations/: 0001_initial.py
test_django_async/: asgi.py  settings.py  urls.py  wsgi.py
