[tool.poetry]
name = "test-django-async"
version = "0.1.0"
description = ""
authors = ["turulomio <turulomio@yahoo.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
djangorestframework = "^3.15.2"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"
poethepoet = "^0.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
